--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="container">
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/sJ8vBcm/1-1.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/sJ8vBcm/1-1.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/BCsrygF/Image-1.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/BCsrygF/Image-1.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
