--- a/screen2.html
+++ b/screen2.html
@@ -10,27 +10,27 @@
   <main class="main2">
     <div class="container2">
       <!-- Buttons linked to open the Image Gallery HTML pages -->
-      <a href="gallery1.html">
+      <a href="">
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 1">
         <p></p>
       </a>
-      <a href="gallery2.html">
+      <a href="">
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 2">
         <p></p>
       </a>
-      <a href="gallery3.html">
+      <a href="">
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 3">
         <p></p>
       </a>
-      <a href="gallery4.html">
+      <a href="">
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 4">
         <p></p>
       </a>
-      <a href="gallery5.html">
+      <a href="">
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 5">
         <p></p>
       </a>
-      <a href="gallery6.html">
+      <a href="">
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 6">
         <p></p>
       </a>
