--- a/screen2.html
+++ b/screen2.html
@@ -10,11 +10,11 @@
   <main class="main2">
     <div class="container2">
       <!-- Buttons linked to open the Image Gallery HTML pages -->
-      <a href="">
+      <a href="gallery1.html">
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 1">
         <p></p>
       </a>
-      <a href="">
+      <a href="gallery2.html">
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 2">
         <p></p>
       </a>
