--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main class="main1">
           <a href="screen2.html">
-            <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Screen 2 Image">
+           <img src="https://i.ibb.co/q0YZvbG/01-Product-Calendar-Home-Page.jpg" alt="Screen 2 Image">
             <!-- <button>Go to Screen 2</button> -->
           </a>
         </div>
