--- a/screen2.html
+++ b/screen2.html
@@ -34,6 +34,18 @@
         <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 6">
         <p></p>
       </a>
+      <a href="">
+        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 7">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 8">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 9">
+        <p></p>
+      </a>
 
       <!-- Back button to return to Screen 1 -->
       <a href="index.html">
