--- a/screen2.html
+++ b/screen2.html
@@ -11,7 +11,7 @@
     <div class="container2">
       <!-- Buttons linked to open the Image Gallery HTML pages -->
       <a href="gallery1.html">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 1">
+        <img src="https://i.ibb.co/PCffTnL/Textile-Home-Page.jpg" alt="Image 1">
         <p></p>
       </a>
       <a href="gallery2.html">
