--- a/screen2.html
+++ b/screen2.html
@@ -15,7 +15,7 @@
         <p></p>
       </a>
       <a href="gallery2.html">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 2">
+        <img src="https://i.ibb.co/GWgL9Vv/Toy-Home-Page.jpg" alt="Image 2">
         <p></p>
       </a>
       <a href="">
