--- a/screen2.html
+++ b/screen2.html
@@ -19,31 +19,31 @@
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 3">
+        <img src="https://i.ibb.co/B6dtymy/3.jpg" alt="Image 3">
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 4">
+        <img src="https://i.ibb.co/PGDTdS3/4.jpg" alt="Image 4">
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 5">
+        <img src="https://i.ibb.co/YWv8yNc/5.jpg" alt="Image 5">
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 6">
+        <img src="https://i.ibb.co/RGKYcW0/6.jpg" alt="Image 6">
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 7">
+        <img src="https://i.ibb.co/XWDX7cK/7.jpg" alt="Image 7">
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 8">
+        <img src="https://i.ibb.co/qjX0n4n/8.jpg" alt="Image 8">
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/z4Z4y2j/1.jpg" alt="Image 9">
+        <img src="https://i.ibb.co/N9Fgh8S/9.jpg" alt="Image 9">
         <p></p>
       </a>
 
