--- a/gallery1.html
+++ b/gallery1.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Responsive Gallery Images with Fancybox.js</title>
+  <title>Textile</title>
   <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,15 +18,15 @@
   <div class="container">
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/BCsrygF/Image-1.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/BCsrygF/Image-1.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/6vqHfj8/Textile-Presentation-1.jpg" data-fancybox="gallery" data-caption="">
+          <img src="https://i.ibb.co/6vqHfj8/Textile-Presentation-1.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/2KJrChH/Image-2.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/2KJrChH/Image-2.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/jb66CH7/Textile-Presentation-2.jpg" data-fancybox="gallery" data-caption="">
+          <img src="https://i.ibb.co/jb66CH7/Textile-Presentation-2.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
