--- a/gallery1.html
+++ b/gallery1.html
@@ -32,52 +32,52 @@
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/zNt6tCX/4.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/zNt6tCX/4.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/dP7dDMy/Textile-Presentation-3.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/dP7dDMy/Textile-Presentation-3.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/8PQfh7N/5.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/8PQfh7N/5.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/jyLfJbv/Textile-Presentation-4.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/jyLfJbv/Textile-Presentation-4.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/vmLshZW/6.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/vmLshZW/6.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/74YzPRy/Textile-Presentation-5.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/74YzPRy/Textile-Presentation-5.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/zNKWXGs/7.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/zNKWXGs/7.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/NSY7b7w/Textile-Presentation-6.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/NSY7b7w/Textile-Presentation-6.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/brT0QXk/8.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/brT0QXk/8.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/Gk6zzJs/Textile-Presentation-7.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/Gk6zzJs/Textile-Presentation-7.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/F4tDtyf/9.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/F4tDtyf/9.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/cQWpp1f/Textile-Presentation-8.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/cQWpp1f/Textile-Presentation-8.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
-    <!-- <div class="card">
+    <div class="card">
       <div class="card-image">
-        <a href="https://source.unsplash.com/1280x720/?mountain" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://source.unsplash.com/1280x720/?mountain" alt="Image Gallery">
+        <a href="https://i.ibb.co/Nn4mC2M/Textile-Presentation-9.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/Nn4mC2M/Textile-Presentation-9.jpg" alt="Image Gallery">
         </a>
-      </div> -->
+      </div>
     </div>
   </div>
 </main>
