--- a/gallery2.html
+++ b/gallery2.html
@@ -18,60 +18,60 @@
   <div class="container">
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/BCsrygF/Image-1.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/BCsrygF/Image-1.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/47Vhwc2/Toy-Sector-Presentation-1.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/47Vhwc2/Toy-Sector-Presentation-1.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/2KJrChH/Image-2.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/2KJrChH/Image-2.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/QMDW32Y/Toy-Sector-Presentation-2.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/QMDW32Y/Toy-Sector-Presentation-2.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/zNt6tCX/4.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/zNt6tCX/4.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/jJ2y4XQ/Toy-Sector-Presentation-3.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/jJ2y4XQ/Toy-Sector-Presentation-3.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/8PQfh7N/5.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/8PQfh7N/5.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/fp4kRgV/Toy-Sector-Presentation-4.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/fp4kRgV/Toy-Sector-Presentation-4.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/vmLshZW/6.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/vmLshZW/6.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/wwz5vx9/Toy-Sector-Presentation-5.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/wwz5vx9/Toy-Sector-Presentation-5.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/zNKWXGs/7.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/zNKWXGs/7.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/FmW45CH/Toy-Sector-Presentation-6.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/FmW45CH/Toy-Sector-Presentation-6.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/brT0QXk/8.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/brT0QXk/8.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/886yxmc/Toy-Sector-Presentation-7.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
+          <img src="https://i.ibb.co/886yxmc/Toy-Sector-Presentation-7.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
-    <div class="card">
+<!--     <div class="card">
       <div class="card-image">
         <a href="https://i.ibb.co/F4tDtyf/9.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
           <img src="https://i.ibb.co/F4tDtyf/9.jpg" alt="Image Gallery">
         </a>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="card">
       <div class="card-image">
         <a href="https://source.unsplash.com/1280x720/?mountain" data-fancybox="gallery" data-caption="Caption Images 1">
