--- a/screen2.html
+++ b/screen2.html
@@ -7,6 +7,23 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="header">
+    <div class="theme-section">
+      <div class="theme-name">
+        <img src="https://i.ibb.co/8bVxZzN/theme-image.jpg" alt="Theme Image">
+      </div>
+    </div>
+    <div class="download-button">
+      <!-- Add an id to the download button -->
+      <a href="https://drive.google.com/u/0/uc?id=1itH773OyJm35jsVjRqOpCfSFZOLRDZKZ&export=download" download="theme.pdf">
+      <img src="https://i.ibb.co/xgSpwbZ/download-button.png" alt="Download PDF">
+    </a>
+    </div>
+  </div>
+  <div class="month-names">
+    <p>January</p>
+    <p>जनवरी</p>
+  </div>
   <main class="main2">
     <div class="container2">
       <!-- Buttons linked to open the Image Gallery HTML pages -->
