--- a/screen2.html
+++ b/screen2.html
@@ -71,5 +71,8 @@
     </div>
   </main>
   </main>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js'></script>
+  <script src="./script.js"></script>
 </body>
 </html>
