--- a/screen2.html
+++ b/screen2.html
@@ -15,7 +15,7 @@
     </div>
     <div class="download-button">
       <!-- Add an id to the download button -->
-      <a href="https://drive.google.com/u/0/uc?id=1itH773OyJm35jsVjRqOpCfSFZOLRDZKZ&export=download" download="theme.pdf">
+      <a href="https://www.africau.edu/images/default/sample.pdf" download="theme.pdf">
       <img src="https://i.ibb.co/xgSpwbZ/download-button.png" alt="Download PDF">
     </a>
     </div>
