--- a/screen2.html
+++ b/screen2.html
@@ -23,7 +23,10 @@
   <div class="month-names">
     <p>January</p>
     <p>जनवरी</p>
-  </div>
+    <a href="https://drive.google.com/u/0/uc?id=1ApJC71e6mbGUe2GYXJF-INURRqCNDk6l&export=download" download="image.jpg">
+        <img src="https://i.ibb.co/xgSpwbZ/download-button.png" alt="Download JPEG">
+    </a>
+</div>
   <main class="main2">
     <div class="container2">
       <!-- Buttons linked to open the Image Gallery HTML pages -->
