--- a/index.html
+++ b/index.html
@@ -11,14 +11,72 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <main class="main1">
-          <a href="screen2.html">
-           <img src="https://i.ibb.co/q0YZvbG/01-Product-Calendar-Home-Page.jpg" alt="Screen 2 Image">
-            <button>Click on Image</button>
-          </a>
-        </div>
+    <div class="header">
+    <div class="theme-section">
+      <div class="theme-name">
+        <img src="https://i.ibb.co/8bVxZzN/theme-image.jpg" alt="Theme Image">
       </div>
     </div>
+    <div class="download-button">
+      <!-- Add an id to the download button -->
+      <a href="https://drive.google.com/u/0/uc?id=1itH773OyJm35jsVjRqOpCfSFZOLRDZKZ&export=download" download="theme.pdf">
+      <img src="https://i.ibb.co/xgSpwbZ/download-button.png" alt="Download PDF">
+    </a>
+    </div>
+  </div>
+  <div class="month-names">
+    <p>January</p>
+    <p>जनवरी</p>
+    <a href="https://drive.google.com/u/0/uc?id=1ApJC71e6mbGUe2GYXJF-INURRqCNDk6l&export=download" download="image.jpg">
+        <img src="https://i.ibb.co/xgSpwbZ/download-button.png" alt="Download JPEG">
+    </a>
+</div>
+  <main class="main2">
+    <div class="container2">
+      <!-- Buttons linked to open the Image Gallery HTML pages -->
+      <a href="gallery1.html">
+        <img src="https://i.ibb.co/PCffTnL/Textile-Home-Page.jpg" alt="Image 1">
+        <p></p>
+      </a>
+      <a href="gallery2.html">
+        <img src="https://i.ibb.co/GWgL9Vv/Toy-Home-Page.jpg" alt="Image 2">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/B6dtymy/3.jpg" alt="Image 3">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/PGDTdS3/4.jpg" alt="Image 4">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/YWv8yNc/5.jpg" alt="Image 5">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/RGKYcW0/6.jpg" alt="Image 6">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/XWDX7cK/7.jpg" alt="Image 7">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/qjX0n4n/8.jpg" alt="Image 8">
+        <p></p>
+      </a>
+      <a href="">
+        <img src="https://i.ibb.co/N9Fgh8S/9.jpg" alt="Image 9">
+        <p></p>
+      </a>
+
+      <!-- Back button to return to Screen 1 -->
+      <a href="index.html">
+        <button>Back</button>
+      </a>
+    </div>
+  </main>
   </main>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
