--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/B6dtymy/3.jpg" alt="Image 3">
+        <img src="https://i.ibb.co/j9NFc4m/Calendar-2024-11th-December-27.jpg" alt="Image 3">
         <p></p>
       </a>
       <a href="">
