--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p></p>
       </a>
       <a href="">
-        <img src="https://i.ibb.co/PGDTdS3/4.jpg" alt="Image 4">
+        <img src="https://i.ibb.co/3TGVm3m/Calendar-2024-11th-December-28.jpg" alt="Image 4">
         <p></p>
       </a>
       <a href="">
