--- a/gallery1.html
+++ b/gallery1.html
@@ -18,54 +18,54 @@
   <div class="container">
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/6vqHfj8/Textile-Presentation-1.jpg" data-fancybox="gallery" data-caption="TEXTILE">
-          <img src="https://i.ibb.co/6vqHfj8/Textile-Presentation-1.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/zJpvcKk/Textile-Presentation-Vertical-2.jpg" data-fancybox="gallery" data-caption="TEXTILE">
+          <img src="https://i.ibb.co/zJpvcKk/Textile-Presentation-Vertical-2.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/jb66CH7/Textile-Presentation-2.jpg" data-fancybox="gallery" data-caption="TEXTILE">
-          <img src="https://i.ibb.co/jb66CH7/Textile-Presentation-2.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/VCyggd3/Textile-Presentation-Vertical-3.jpg" data-fancybox="gallery" data-caption="TEXTILE">
+          <img src="https://i.ibb.co/VCyggd3/Textile-Presentation-Vertical-3.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/dP7dDMy/Textile-Presentation-3.jpg" data-fancybox="gallery" data-caption="TEXTILE">
-          <img src="https://i.ibb.co/dP7dDMy/Textile-Presentation-3.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/4SjDKDT/Textile-Presentation-Vertical-4.jpg" data-fancybox="gallery" data-caption="TEXTILE">
+          <img src="https://i.ibb.co/4SjDKDT/Textile-Presentation-Vertical-4.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/jyLfJbv/Textile-Presentation-4.jpg" data-fancybox="gallery" data-caption="TEXTILE">
-          <img src="https://i.ibb.co/jyLfJbv/Textile-Presentation-4.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/YhKGTFs/Textile-Presentation-Vertical-5.jpg" data-fancybox="gallery" data-caption="TEXTILE">
+          <img src="https://i.ibb.co/YhKGTFs/Textile-Presentation-Vertical-5.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/74YzPRy/Textile-Presentation-5.jpg" data-fancybox="gallery" data-caption="TEXTILE">
-          <img src="https://i.ibb.co/74YzPRy/Textile-Presentation-5.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/bXqsNTK/Textile-Presentation-Vertical-6.jpg" data-fancybox="gallery" data-caption="TEXTILE">
+          <img src="https://i.ibb.co/bXqsNTK/Textile-Presentation-Vertical-6.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/NSY7b7w/Textile-Presentation-6.jpg" data-fancybox="gallery" data-caption="TEXTILE">
-          <img src="https://i.ibb.co/NSY7b7w/Textile-Presentation-6.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/sjP1TQ1/Textile-Presentation-Vertical-7.jpg" data-fancybox="gallery" data-caption="TEXTILE">
+          <img src="https://i.ibb.co/sjP1TQ1/Textile-Presentation-Vertical-7.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/Gk6zzJs/Textile-Presentation-7.jpg" data-fancybox="gallery" data-caption="TEXTILE">
-          <img src="https://i.ibb.co/Gk6zzJs/Textile-Presentation-7.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/WvrrNBk/Textile-Presentation-Vertical-8.jpg" data-fancybox="gallery" data-caption="TEXTILE">
+          <img src="https://i.ibb.co/WvrrNBk/Textile-Presentation-Vertical-8.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
-    <div class="card">
+<!--     <div class="card">
       <div class="card-image">
         <a href="https://i.ibb.co/cQWpp1f/Textile-Presentation-8.jpg" data-fancybox="gallery" data-caption="TEXTILE">
           <img src="https://i.ibb.co/cQWpp1f/Textile-Presentation-8.jpg" alt="Image Gallery">
@@ -78,7 +78,7 @@
           <img src="https://i.ibb.co/Nn4mC2M/Textile-Presentation-9.jpg" alt="Image Gallery">
         </a>
       </div>
-    </div>
+    </div> -->
   </div>
 </main>
 <!-- partial -->
