--- a/screen2.html
+++ b/screen2.html
@@ -68,9 +68,9 @@
       </a>
 
       <!-- Back button to return to Screen 1 -->
-      <a href="index.html">
+<!--       <a href="index.html">
         <button>Back</button>
-      </a>
+      </a> -->
     </div>
   </main>
   </main>
