--- a/gallery2.html
+++ b/gallery2.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Responsive Gallery Images with Fancybox.js</title>
+  <title>Toy</title>
   <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,40 +18,40 @@
   <div class="container">
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/47Vhwc2/Toy-Sector-Presentation-1.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/47Vhwc2/Toy-Sector-Presentation-1.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/N9cSCcP/Toy-Presentation-Vertical-10.jpg" data-fancybox="gallery" data-caption="TOY">
+          <img src="https://i.ibb.co/N9cSCcP/Toy-Presentation-Vertical-10.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/QMDW32Y/Toy-Sector-Presentation-2.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/QMDW32Y/Toy-Sector-Presentation-2.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/3TTJJtP/Toy-Presentation-Vertical-11.jpg" data-fancybox="gallery" data-caption="TOY">
+          <img src="https://i.ibb.co/3TTJJtP/Toy-Presentation-Vertical-11.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/jJ2y4XQ/Toy-Sector-Presentation-3.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/jJ2y4XQ/Toy-Sector-Presentation-3.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/V9WwFqb/Toy-Presentation-Vertical-12.jpg" data-fancybox="gallery" data-caption="TOY">
+          <img src="https://i.ibb.co/V9WwFqb/Toy-Presentation-Vertical-12.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/fp4kRgV/Toy-Sector-Presentation-4.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/fp4kRgV/Toy-Sector-Presentation-4.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/HNB4p8Q/Toy-Presentation-Vertical-13.jpg" data-fancybox="gallery" data-caption="TOY">
+          <img src="https://i.ibb.co/HNB4p8Q/Toy-Presentation-Vertical-13.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
     <div class="card">
       <div class="card-image">
-        <a href="https://i.ibb.co/wwz5vx9/Toy-Sector-Presentation-5.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
-          <img src="https://i.ibb.co/wwz5vx9/Toy-Sector-Presentation-5.jpg" alt="Image Gallery">
+        <a href="https://i.ibb.co/8dsNwHH/Toy-Presentation-Vertical-14.jpg" data-fancybox="gallery" data-caption="TOY">
+          <img src="https://i.ibb.co/8dsNwHH/Toy-Presentation-Vertical-14.jpg" alt="Image Gallery">
         </a>
       </div>
     </div>
-    <div class="card">
+<!--     <div class="card">
       <div class="card-image">
         <a href="https://i.ibb.co/FmW45CH/Toy-Sector-Presentation-6.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
           <img src="https://i.ibb.co/FmW45CH/Toy-Sector-Presentation-6.jpg" alt="Image Gallery">
@@ -64,7 +64,7 @@
           <img src="https://i.ibb.co/886yxmc/Toy-Sector-Presentation-7.jpg" alt="Image Gallery">
         </a>
       </div>
-    </div>
+    </div> -->
 <!--     <div class="card">
       <div class="card-image">
         <a href="https://i.ibb.co/F4tDtyf/9.jpg" data-fancybox="gallery" data-caption="Caption Images 1">
