--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
     <div class="theme-section">
       <div class="theme-name">
-        <img src="https://i.ibb.co/8bVxZzN/theme-image.jpg" alt="Theme Image">
+        <img src="https://i.ibb.co/NWKNVzp/calendar.png" alt="Theme Image">
       </div>
     </div>
     <div class="download-button">
