--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <img src="https://i.ibb.co/8bVxZzN/theme-image.jpg" alt="Theme Image">
         </div>
     </div>
-    <div class="video-button">
+<!--     <div class="video-button">
       <img src="https://i.ibb.co/fM13pj8/play-button.png" onclick="openVideo()">
-  </div>
+  </div> -->
     <div class="download-button">
         <a href="https://drive.google.com/u/0/uc?id=1itH773OyJm35jsVjRqOpCfSFZOLRDZKZ&export=download" download="theme.pdf">
             <img src="https://i.ibb.co/xgSpwbZ/download-button.png" alt="Download PDF">
